--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -10,7 +10,7 @@
         android:id="@+id/ed_id"
         android:layout_width="300dp"
         android:layout_height="40dp"
-        android:background="@color/teal_700"
+        android:background="@color/material_dynamic_primary70"
         android:ems="10"
         android:hint="ID"
         android:inputType="textPersonName"
@@ -25,7 +25,7 @@
         android:id="@+id/ed_nom"
         android:layout_width="300dp"
         android:layout_height="40dp"
-        android:background="@color/teal_700"
+        android:background="@color/material_dynamic_primary70"
         android:ems="10"
         android:hint="Nom"
         android:inputType="textPersonName"
@@ -40,7 +40,7 @@
         android:id="@+id/ed_image"
         android:layout_width="300dp"
         android:layout_height="40dp"
-        android:background="@color/teal_700"
+        android:background="@color/material_dynamic_primary70"
         android:ems="10"
         android:hint="Image URL"
         android:inputType="textPersonName"
