--- a/app/src/main/res/layout/book_item.xml
+++ b/app/src/main/res/layout/book_item.xml
@@ -5,18 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
-        android:text="" />
-
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="200dp"
         android:layout_height="160dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="2dp"
+        android:padding="10dp"
         tools:srcCompat="@tools:sample/avatars" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="60dp"
+        android:text="" />
+
 </LinearLayout>
